Added serialization and documentation